<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright 2014 Deepankar Bhardwaj

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

    	http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<resources>

    <string name="app_name">Pingr</string>
    <string name="action_settings">Settings</string>
    <string name="ping_en">Ping</string>
    <string name="target_en">target</string>
    <string name="good_rtt_en">Good rtt</string>
    <string name="pref_key_green">pref_key_green</string>
    <string name="pref_key_orange">pref_key_orange</string>
    <string name="pref_key_red">pref_key_red</string>
    <string name="port_en">port</string>
    <string name="clear_list">Clear list</string>

    <!-- Merge from EnhancedListView -->
    <string name="elv_undo">Undo</string>
    <string name="elv_undo_all">Undo All</string>
    <string name="elv_item_deleted">Item deleted</string>
    <string name="elv_n_items_deleted">%1$s items deleted</string>
    

    <!-- ACRA -->
    <string name="crash_toast">Whoopsie daisy!</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">Pingr has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You may add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thanks!</string>

</resources>